--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CXXFLAGS =	-O2 -g -Wall -fmessage-length=0
 
-OBJS =		ray-trace.o Vector.o Imagen.o Color.o
+OBJS =		ray-trace.o Vector.o Imagen.o Color.o Rayo.o Camara.o Luz.o
 
 LIBS =
 
