Añadida jerarquía de herencia a los objetos a pintar

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CXXFLAGS =	-O2 -g -Wall -fmessage-length=0
 
-OBJS =		ray-trace.o Vector.o Imagen.o Color.o Rayo.o Camara.o Luz.o Esfera.o
+OBJS =		ray-trace.o Vector.o Imagen.o Color.o Rayo.o Camara.o Luz.o Objeto.o Esfera.o
 
 LIBS =
 
