Añadido supersampling y pruebas con texturas

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,13 +1,13 @@
-CXXFLAGS =	-O2 -g -Wall -fmessage-length=0
+CXXFLAGS =	-O3 -g -Wall -fmessage-length=0 -fopenmp
 
-OBJS =		ray-trace.o Vector.o Imagen.o Color.o Rayo.o Camara.o Interseccion.o Objeto.o Esfera.o Luz.o
+OBJS =		ray-trace.o Vector.o Imagen.o Color.o Rayo.o Camara.o Interseccion.o Objeto.o Esfera.o Luz.o Triangulo.o Modelo.o Textura.o
 
 LIBS =
 
 TARGET =	ray-trace.exe
 
 $(TARGET):	$(OBJS)
-	$(CXX) -o $(TARGET) $(OBJS) $(LIBS)
+	$(CXX) $(CXXFLAGS) -o $(TARGET) $(OBJS) $(LIBS)
 
 all:	$(TARGET)
 
